--- a/dada/extras/documentation/pod_source/changes_4_x.pod
+++ b/dada/extras/documentation/pod_source/changes_4_x.pod
@@ -2,6 +2,35 @@
 
 =head1 Dada Mail Changelog for version 4.x.x
 
+=head1 4.9.1
+
+=head2 Summary 4.9.1
+
+=head2 Features 4.9.1
+
+=head3 Amazon SES SMTP Interface Supported
+
+You can learn more about Amazon's SES SMTP Interface here: 
+
+L<http://docs.amazonwebservices.com/ses/latest/DeveloperGuide/SMTP.html>
+
+Dada Mail can now be configured to use Amazon's SES SMTP Interface, as well as working with the Amazon SES API - whichever you prefer. 
+
+=head2 Bugfixes 4.9.1
+
+=head3 Black List Matching Problems
+
+https://github.com/justingit/dada-mail/issues/244
+
+=head3 <!-- tmpl_var date --> tag used, but not supported anymore
+
+https://github.com/justingit/dada-mail/issues/243
+
+=head3 dead link for email links in clickthrough tracker
+
+https://github.com/justingit/dada-mail/issues/242
+
+
 =head1 4.9.0
 
 =head2 Summary 4.9.0
