--- a/dada/extras/documentation/pod_source/install_dada_mail.pod
+++ b/dada/extras/documentation/pod_source/install_dada_mail.pod
@@ -18,13 +18,26 @@ L<http://dadamailproject.com/pro_dada>
 
 Download the C<dada-4_9_1-beta1.tar.gz> distro (you will B<not> have to uncompress the distribution) and then upload it to your hosting account's I<cgi-bin>.
 
-I<In these directions we suggest the cgi-bin, but feel free to use any directory that you B<know> will work.>
+=begin html
+
+<div class="see_also">
+<p>
+ In these directions we suggest the <code>cgi-bin</code>, but feel free to use any directory that you <strong>know</strong> will work. See also: <a href="./FAQ-install_upgrade.pod#fix_me">Installing Dada Mail in a directory other than in your, &quot;cgi-bin&quot;</a>
+</p>
+</div>
+
+=end html
 
 =head1 Step #3 Upload the, "uncompress_dada.cgi" script to your cgi-bin
 
 Download the, C<uncompress_dada.cgi> script from here: 
 
-=for html <ul><li><strong><a href="https://github.com/justingit/dada-mail/raw/v4_9_1-beta1_2011_12_18/uncompress_dada.cgi">uncompress_dada.cgi</a> (Save Page/Link As...)</strong></li></ul>
+=begin html 
+
+<ul>
+<li><strong><a href="https://github.com/justingit/dada-mail/raw/v4_9_1-beta1_2011_12_18/uncompress_dada.cgi">uncompress_dada.cgi</a> (Save Page/Link As...)</strong></li></ul>
+
+=end html
 
 and upload this script (PlainTest/ASCII mode - NOT binary!) to your hosting account's I<cgi-bin> - right alongside the I<dada-4_9_1-beta1.tar.gz> distro you just put up. 
 
@@ -36,12 +49,23 @@ The, C<uncompress_dada.cgi> should attempt to uncompress the I<dada-4_9_1-beta1.
 
 Once it's finished running, you should be presented a link to use the actual installer. Click the link at the end of the screen and go ahead and configure Dada Mail! 
 
-If this doesn't happen and you get a message in your browser window, sort of like this: 
+=begin html
 
-	Can't find dada-4_9_1-beta1.tar to uncompress!
-	You may have to uncompress and prep Dada Mail manually.
+<div class="see_also">
 
-Try using the, B<Prepping Dada Mail Manually> instructions, below. 
+<p>See, <a href="./FAQ-install_upgrade#prepping_dada_mail_manually">Prepping Dada Mail Manually</a> if this doesn't happen and you get a message in your browser window, sort of like this: </p>
+
+<pre>
+Can't find dada-4_9_1-beta1.tar to uncompress!
+You may have to uncompress and prep Dada Mail manually.
+</pre> 
+
+
+</div>
+
+
+=end html
+
 
 =head1 Configuring Dada Mail with the, "install.cgi" Script 
 
@@ -199,33 +223,7 @@ B<How to Download, Install and Configure Dada Mail v4.9.1>
 
 =for html <p><iframe width="853" height="510" src="http://www.youtube.com/embed/MWz8O13yc0s?hd=1" frameborder="0" allowfullscreen></iframe></p>
 
-=head1 Prepping Dada Mail Manually
 
-If the, B<uncompress_dada.cgi> script fails to uncompress the Dada Mail distro, you may have to a few steps, yourself. This usually is because the C<gunzip> utility just isn't available to whatever is running the helper script. Shucks. 
-
-=head2 Uncompress the Distribution
-
-The tar.gz distribution you just downloaded to your Desktop Computer should uncompress to one folder/directory called, B<dada>.
-
-=head2 Upload the, "dada" directory into your cgi-bin
-
-There are a lot of files and this will take a few minutes.
-
-I<(If you're familiar with accessing your hosting account via ssh, feel free to simply upload the distribution to your hosting account and uncompress from there.)>
-
-=head2 Change the name of the, "dada/installer-disabled" directory to, "dada/installer"
-
-By default, the installer is disabled, so not to pose as a security issue. Rename the, I<dada/B<installer-disabled>> directory to, I<dada/B<installer>>. 
-
-=head2 Change permissions of the, "dada/mail.cgi" and "dada/installer/install.cgi" scripts to, "755"
-
-B<BOTH> of these scripts need to have their permissions changed to, B<755>
-
-=head2 Visit the, dada/installer/install.cgi script in your web browser
-
-The, C<install.cgi> script should take over from there.
-
-You can now jump back to the instructions above at, B<Configuring Dada Mail with the, "install.cgi" Script >
 
 =head1 Manual Installation
 
