--- a/dada/extras/documentation/pod_source/FAQ-general.pod
+++ b/dada/extras/documentation/pod_source/FAQ-general.pod
@@ -566,6 +566,63 @@ B<( Images in this Webpage Should:) "be embedded in the message itself. ">
 
 L<http://docs.fckeditor.net/FCKeditor_2.x/Developers_Guide/Configuration/Built_in_File_Browser>
 
+=head2 How do you use TinyMCE with Dada Mail? 
+
+I<(The below instructions work for version 4.9.x of Dada Mail)>
+
+There's no built-in support for TinyMCE, but you may edit Dada Mail's template files to add in support yourself. 
+
+B<Install> TinyMCE. Here's a simple walkthrough:
+
+L<http://www.tinymce.com/wiki.php/%22For_Dummies%22>
+
+B<Edit> the, C<dada/DADA/Template/templates/default_admin_template.tmpl> file. Add the following lines in the head of the HTML: 
+
+	<script language="javascript" type="text/javascript" src="http://example.com/tinymce/jscripts/tiny_mce/tiny_mce.js"></script>
+	<script language="javascript" type="text/javascript">
+		tinyMCE.init({
+			
+	
+					// This is the most important part
+	        		mode : "specific_textareas",
+			        editor_selector : "mceEditor"
+					//
+						
+	
+			        theme : "advanced",
+			        plugins : "autolink,lists,spellchecker,pagebreak,style,layer,table,save,advhr,advimage,advlink,emotions,iespell,inlinepopups,insertdatetime,preview,media,searchreplace,print,contextmenu,paste,directionality,fullscreen,noneditable,visualchars,nonbreaking,xhtmlxtras,template",
+
+			        // Theme options
+			        theme_advanced_buttons1 : "save,newdocument,|,bold,italic,underline,strikethrough,|,justifyleft,justifycenter,justifyright,justifyfull,|,styleselect,formatselect,fontselect,fontsizeselect",
+			        theme_advanced_buttons2 : "cut,copy,paste,pastetext,pasteword,|,search,replace,|,bullist,numlist,|,outdent,indent,blockquote,|,undo,redo,|,link,unlink,anchor,image,cleanup,help,code,|,insertdate,inserttime,preview,|,forecolor,backcolor",
+			        theme_advanced_buttons3 : "tablecontrols,|,hr,removeformat,visualaid,|,sub,sup,|,charmap,emotions,iespell,media,advhr,|,print,|,ltr,rtl,|,fullscreen",
+			        theme_advanced_buttons4 : "insertlayer,moveforward,movebackward,absolute,|,styleprops,spellchecker,|,cite,abbr,acronym,del,ins,attribs,|,visualchars,nonbreaking,template,blockquote,pagebreak,|,insertfile,insertimage",
+			        theme_advanced_toolbar_location : "top",
+			        theme_advanced_toolbar_align : "left",
+			        theme_advanced_statusbar_location : "bottom",
+			        theme_advanced_resizing : true,
+					
+		});
+	</script>	
+
+Make sure to change the URL, C<http://example.com/tinymce/jscripts/tiny_mce/tiny_mce.js> 
+to reflect where your TinyMCE install is located and feel free to customize the options above to your taste. 
+The most important part that you will want to make sure to keep the same is: 
+
+	mode : "specific_textareas",
+	editor_selector : "mceEditor"
+
+B<Edit> the, C<dada/DADA/Template/templates/html_message_form_field_widget.tmpl> file. Change the contents of the file to the below:
+
+	<!-- begin html_message_form_field_widget.tmpl --> 
+
+	<textarea name="html_message_body" cols="80" rows="30" id="html_message_body" class="mceEditor"><!-- tmpl_var html_message_body_content --></textarea>
+
+	<!-- end html_message_form_field_widget.tmpl --> 
+
+TinyMCE should now work with Dada Mail in the "Send a Message" and "Send a Webpage" screens. 
+
+
 =head2 How do you install, "CPAN Perl Modules"
 
 There are many advanced features in Dada Mail, that rely on I<CPAN Perl Modules>
