--- a/dada/extras/documentation/pod_source/FAQ-general.pod
+++ b/dada/extras/documentation/pod_source/FAQ-general.pod
@@ -93,7 +93,47 @@ Yes. You can rename the, B<mail.cgi> file to any other valid filename, like I<ne
 
 The only place that this variable is hardcoded is in the, C<$PROGRAM_URL> variable - so make sure to change this variable as well to reflect the file name changes.
 
-=head2 How do I fetch/reset the Dada Mail Root Password
+=head2 How do I change the list short name? 
+
+There's officially no support to change the list short name in Dada Mail. We do not suggest you do this.
+
+If you are running one of the SQL backends for Dada Mail, you may use the below SQL to change the list short name, for most of Dada Mail.
+
+Before running, make a full backup of your Dada Mail SQL database, as changes could potentialy be irreversable.
+
+	UPDATE dada_archives SET list = 'new' WHERE list = 'old'; 
+	
+	UPDATE dada_bounce_scores SET list = 'new' WHERE list = 'old'; 
+	
+	UPDATE dada_clickthrough_url_log SET list = 'new' WHERE list = 'old'; 
+	
+	UPDATE dada_mass_mailing_event_log SET list = 'new' WHERE list = 'old'; 
+	
+	UPDATE dada_settings SET list = 'new' WHERE list = 'old'; 
+	
+	UPDATE dada_settings SET value = 'new' WHERE value = 'old' and setting = 'list';
+	
+	UPDATE dada_subscribers SET list = 'new' WHERE list = 'old'; 
+
+In the above SQL, change, C<new> to the new list short name you would like to use and, C<old> to the old list short name you would like to rename. 
+
+After running, make sure to clear your Dada Mail screen cache, as links will need to be updated. 
+
+Although this will modify your SQL database to use this new short name, this will not: 
+
+=over
+
+=item * Update any subscription forms you may have embedded on your site's pages
+
+=item * Update any plaintext logs that Dada Mail keeps
+
+=item * Update any subscription or unsubscription links
+
+These links in already existing emails will be B<broken>.
+
+=back
+
+=head2 How do I fetch/reset the Dada Mail Root Password?
 
 The Dada Mail Root Password is usually saved in an encrypted form, so cannot be simply read from the configuration. You may manually reset the Dada Mail Root Password yourself. 
 
